# hidra

./: .gitignore  Cargo.toml  README.md  WARP.md
.github/workflows/: ci.yml
crates/hidra-broker/: Cargo.toml
crates/hidra-broker/src/: backend.rs  main.rs
crates/hidra-broker/src/backend/: driver.rs  mock.rs
crates/hidra-client/: Cargo.toml
crates/hidra-client/src/: lib.rs
crates/hidra-ffi/: Cargo.toml
crates/hidra-ffi/src/: lib.rs
crates/hidra-ipc/: Cargo.toml
crates/hidra-ipc/src/: lib.rs
crates/hidra-protocol/: Cargo.toml
crates/hidra-protocol/src/: ioctl.rs  lib.rs  report.rs
crates/hidra-tools/: Cargo.toml
crates/hidra-tools/src/: main.rs
drivers/HIDraBus/: .gitignore  Device.c  Driver.c  Guids.c  HIDraBus.h  HIDraBus.inf  HIDraBus.sln  HIDraBus.vcxproj  HIDraBus.vcxproj.filters  Queue.c  ReportDescriptors.c  VhfDevice.c
scripts/: Build-All.ps1  Enable-TestSigning.ps1  New-DevCert.ps1  Reinstall-Driver.ps1
