[workspace]
members = [
  "crates/hidra-protocol",
  "crates/hidra-client",
  "crates/hidra-ffi",
  "crates/hidra-ipc",
  "crates/hidra-tools",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
