[workspace]
members = [
  "crates/hidra-protocol",
  "crates/hidra-client",
  "crates/hidra-ffi",
  "crates/hidra-ipc",
  "crates/hidra-tools",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.16"
serde = { version = "1.0.266", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
