[package]
name = "hidra-broker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hidra-protocol = { path = "../hidra-protocol" }
hidra-ipc = { path = "../hidra-ipc" }
dashmap = "6.1.0"
async-trait = "0.1.89"
