[package]
name = "hidra-broker"
version = "0.1.0"
edition = "2024"

[features]
backend-driver = ["dep:windows"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "sync", "time", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hidra-protocol = { path = "../hidra-protocol" }
hidra-ipc = { path = "../hidra-ipc" }
dashmap = "6.1.0"
async-trait = "0.1.89"
windows = {version = "0.62.0", optional = true, features = ["Win32_Foundation","Win32_Storage_FileSystem","Win32_System_IO","Win32_Security","Win32_Devices_DeviceAndDriverInstallation","Win32_Devices_Properties"] }
