[package]
name = "hidra-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hidra-protocol = { path = "../hidra-protocol" }
hidra-ipc = { path = "../hidra-ipc" }

