[package]
name = "hidra-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.48", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hidra-client = { path = "../hidra-client" }
hidra-ipc = { path = "../hidra-ipc" }
hidra-protocol = { path = "../hidra-protocol" }
